--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
             "Tests\\Kata\\": "tests/"
         }
     },
-    "require": {},
+    "require": {
+        "symfony/http-foundation": "^3.2"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
         "phpunit/php-code-coverage": "^5.0",
